--- a/index.html
+++ b/index.html
@@ -15,14 +15,23 @@
             margin: 0;
             padding: 0;
         }
+        div {
+            position: absolute;
+            top: 30%;
+            left: 30%;
+            margin-top: -100px;
+            /*margin-left: -50px;*/
+            width: 100px;
+            height: 100px;
+        }
     </style>
 </head>
 
 <body>
 
-    <div id="content"></div>
-    <script src="dist/vendor.bundle.js"></script>
-    <script src="dist/bundle.js"></script>
+<div id="content"></div>
+<script src="dist/vendor.bundle.js"></script>
+<script src="dist/bundle.js"></script>
 
 </body>
 
